<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"

    android:background="@drawable/background">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:id="@+id/linearLayout">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="33dp"
            android:src="@drawable/word" />
        <EditText
            android:id="@+id/etfullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:padding="10dp"
            android:text="كمال الطيب"
            android:textColor="#000"
            android:hint="@string/fullname"
            android:textColorHint="#bbbbbb"/>
        <EditText
            android:id="@+id/etphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:padding="10dp" android:textColor="#000"

            android:hint="@string/phone"
            android:text="0598597310"
            android:textColorHint="#bbbbbb"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:padding="10dp"
            android:hint="@string/email"
            android:text="kamal.1985@gmail.com"
            android:textColorHint="#bbbbbb"/>
        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="kamal123"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:hint="@string/username"
            android:textColorHint="#bbbbbb"/>

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:text="123456778"
            android:textColor="#000"
            android:hint="@string/password"
            android:textColorHint="#bbbbbb"
            android:password="true"
            android:gravity="right"/>

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="رام الله"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:hint=""
            android:textColorHint="#bbbbbb"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="الحي الغربي بالقرب من شارع فريد"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:hint=""
            android:textColorHint="#bbbbbb"/>

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:textColor="#000"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
android:text="لدي فيلا في اسكان الغربية تحتاج الى تنظيف مستمر مع مراعاة الاعتناء بكلبي الاليف في حال حدوث امر ما"
                 android:hint="@string/description"
            android:textColorHint="#bbbbbb"/>

        <Button
            android:id="@+id/btnSingIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_margin="4dp"
            android:text="سجل الان"
            android:background="@drawable/rounded_login"
            android:textColor="#000000"


            />
    </LinearLayout>

</ScrollView>

</RelativeLayout>