<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.fbm.sha3ilni.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="33dp"
            android:src="@drawable/word" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/username"
            android:textColorHint="#bbbbbb"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="100dp"
            android:hint="@string/password"
            android:textColorHint="#bbbbbb"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:id="@+id/button1"
                android:background="@drawable/rounded_login"
                android:textColor="#000000"
                android:layout_toLeftOf="@+id/textview"
                android:layout_toStartOf="@+id/textview"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:id="@+id/button"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/textview"
                android:layout_toStartOf="@+id/textview"
                android:background="@drawable/rounded_login"
                android:textColor="#000000"

                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
